--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vary-ui",
-  "version": "1.0.5",
+  "version": "1.0.7",
   "description": "A UI Conponent Library based Vue2, Faster, Lighter, Simpler",
   "homepage": "https://github.com/chinaliyun/vary-ui.git",
   "main": "src/index.js",
@@ -29,18 +29,23 @@
     "README.md"
   ],
   "peerDependencies": {},
-  "dependencies": {},
+  "dependencies": {
+    "@vuepress/plugin-back-to-top": "^1.9.7",
+    "@vuepress/plugin-medium-zoom": "^1.9.7"
+  },
   "devDependencies": {
-    "ali-oss": "^6.16.0",
-    "axios": "^0.26.0",
-    "browser-image-compression": "^1.0.17",
     "@babel/core": "^7.16.12",
     "@babel/preset-env": "^7.16.11",
+    "ali-oss": "^6.16.0",
+    "axios": "^0.26.0",
     "babel-loader": "^8.2.3",
+    "browser-image-compression": "^1.0.17",
     "colors": "^1.4.0",
     "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.5.2",
+    "moment": "^2.29.1",
+    "nanoid": "^3.3.1",
     "progress": "^2.0.3",
     "sass": "^1.49.0",
     "sass-loader": "^12.4.0",
@@ -48,10 +53,9 @@
     "vue": "^2.6.14",
     "vue-loader": "^15.9.8",
     "vue-template-compiler": "^2.6.14",
+    "vuepress": "^2.0.0-beta.43",
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.3",
-    "moment": "^2.29.1",
-    "nanoid": "^3.3.1"
+    "webpack-dev-server": "^4.7.3"
   }
 }
