--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "vary-ui",
-  "version": "1.0.16",
+  "version": "1.0.17",
   "description": "A UI Conponent Library based Vue2, Faster, Lighter, Simpler",
   "homepage": "https://github.com/chinaliyun/vary-ui.git",
   "main": "src/index.js",
   "scripts": {
-    "dev": "node dev.js",
+    "dev": "cd docs && yarn dev",
     "server": "webpack-cli serve --config config/webpack.demo.config.js",
-    "build": "webpack-cli --config config/webpack.config.js",
+    "build": "webpack-cli --config config/webpack.config.js -w",
     "deploy": "webpack-cli --config config/webpack.deploy.config.js",
     "release": "node release.js"
   },
